Fix Elasticsearch configuration: use cluster-level index defaults

--- a/infrastructure/observability/elasticsearch/elasticsearch-configmap.yaml
+++ b/infrastructure/observability/elasticsearch/elasticsearch-configmap.yaml
@@ -13,9 +13,9 @@ data:
     bootstrap.memory_lock: false
     xpack.security.enabled: false
     xpack.monitoring.collection.enabled: true
-    
+
     # Set default number of replicas for indices for better resilience
-    index.number_of_replicas: 2
+    cluster.index.number_of_replicas: 2
     
     # Enable snapshot repository
     path.repo: ["/usr/share/elasticsearch/backup"]
