Fix Kibana access by disabling stripperfix middleware to resolve 404 error

--- a/infrastructure/observability/kibana/kibana-service.yaml
+++ b/infrastructure/observability/kibana/kibana-service.yaml
@@ -19,7 +19,7 @@ metadata:
   name: kibana
   namespace: observability
   annotations:
-    traefik.ingress.kubernetes.io/router.middlewares: observability-stripprefix@kubernetescrd
+    #  traefik.ingress.kubernetes.io/router.middlewares: observability-stripprefix@kubernetescrd
 spec:
   rules:
   - http:
