Add Cloudflare Tunnel and website deployment

--- a/argocd/applications/kustomization.yaml
+++ b/argocd/applications/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - argocd-app-storage.yaml
   - elk-stack.yaml
+  - cloudflare-tunnel.yaml
+  - paulojauregui-com.yaml
