--- a/oke/cluster-addons/cert-manager/cert-manager-app.yaml
+++ b/oke/cluster-addons/cert-manager/cert-manager-app.yaml
@@ -1,21 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager
-  namespace: argocd # This is the namespace where this Application CRD itself lives
+  name: cert-manager # This is the ArgoCD app that deploys the Helm chart
+  namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default # Or your specific ArgoCD project
+  project: default
   source:
     repoURL: 'https://charts.jetstack.io'
     chart: cert-manager
-    targetRevision: 'v1.17.2' # Or latest in v1.17.x series you confirmed
+    targetRevision: 'v1.17.2' # Or your confirmed latest v1.17.x
     helm:
       values: |
         installCRDs: true
 
-        # Setting nodeSelector for all key components to ensure arm64 affinity
         controller:
           nodeSelector:
             kubernetes.io/arch: "arm64"
@@ -28,15 +27,18 @@ spec:
           nodeSelector:
             kubernetes.io/arch: "arm64"
 
+        # The startupapicheck is a Job that runs. It also needs to be scheduled on arm64.
+        # Its values path might be slightly different, but this is a common way.
+        # If it errors, we might need to check the chart's values.yaml for 'startupapicheck' specifically.
         startupapicheck:
           nodeSelector:
             kubernetes.io/arch: "arm64"
   destination:
-    server: 'https://kubernetes.default.svc' # This targets the cluster ArgoCD is running in
-    namespace: cert-manager # Cert-Manager will be installed into this namespace
+    server: 'https://kubernetes.default.svc'
+    namespace: cert-manager
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
-    - CreateNamespace=true # ArgoCD will create the 'cert-manager' namespace
+    - CreateNamespace=true
