--- a/clusters/home-dev/apps.yaml
+++ b/clusters/home-dev/apps.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: app-paulojauregui-com
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/kustomize-version: v5.7.1
 spec:
   project: default
   source:
