--- a/clusters/home-dev/apps.yaml
+++ b/clusters/home-dev/apps.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:HowDiggy/kustomize-version
+    repoURL: https://github.com/HowDiggy/k8s-gitops.git
     targetRevision: HEAD
     path: apps/overlays/development
   destination:
