--- a/apps/overlays/development/kustomization.yaml
+++ b/apps/overlays/development/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: paulojauregui-com
 resources:
-  - ../../base/paulojauregui-com
+  - ../../../base/paulojauregui-com
 patches:
   - path: replica-count.yaml
     target:
