--- a/clusters/oci-prod/infra.yaml
+++ b/clusters/oci-prod/infra.yaml
@@ -56,3 +56,23 @@ spec:
           selfHeal: true
         syncOptions:
         - CreateNamespace=true
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: infra-cluster-issuers
+  namespace: argoproj
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/HowDiggy/k8s-gitops.git
+    targetRevision: main
+    path: infrastructure/base/cert-manager
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: cert-manager
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
