--- a/clusters/oci-prod/app.yaml
+++ b/clusters/oci-prod/app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/HowDiggy/k8s-gitops.git
-    targetRevision: HEAD
+    targetRevision: main
     path: apps/overlays/production
   destination:
     server: https://kubernetes.default.svc
