--- a/clusters/oci-prod/infra.yaml
+++ b/clusters/oci-prod/infra.yaml
@@ -62,7 +62,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: infra-cluster-issuers
-  namespace: argoproj
+  namespace: argocd
 spec:
   project: default
   source:
