--- a/clusters/home-dev/infra.yaml
+++ b/clusters/home-dev/infra.yaml
@@ -27,6 +27,13 @@ spec:
                 kubernetes.io/arch: "amd64"
               service:
                 type: NodePort
+        - name: actions-runner-controller
+          repoURL: https://actions-runner-controller.github.io/actions-runner-controller
+          chart: actions-runner-controller
+          targetRevision: 0.23.2
+          namespace: actions-runner-system
+          helmValues: |
+            installCRDs: true
   template:
     metadata:
       name: '{{name}}'
