--- a/argocd-cm.yaml
+++ b/argocd-cm.yaml
@@ -1,48 +1,72 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: argocd-cm
+  namespace: argocd
+  labels:
+    app.kubernetes.io/name: argocd-cm
+    app.kubernetes.io/part-of: argocd
 data:
   repositories: |
     - url: git@github.com:HowDiggy/k8s-gitops.git
       sshPrivateKeySecret:
         name: private-repo-secret
         key: sshPrivateKey
-  resource.customizations.ignoreResourceUpdates.ConfigMap: |
-    jqPathExpressions:
-      # Ignore the cluster-autoscaler status
-      - '.metadata.annotations."cluster-autoscaler.kubernetes.io/last-updated"'
-      # Ignore the annotation of the legacy Leases election
-      - '.metadata.annotations."control-plane.alpha.kubernetes.io/leader"'
-  resource.customizations.ignoreResourceUpdates.Endpoints: |
-    jsonPointers:
-      - /metadata
-      - /subsets
-  resource.customizations.ignoreResourceUpdates.all: |
-    jsonPointers:
-      - /status
-  resource.customizations.ignoreResourceUpdates.apps_ReplicaSet: |
-    jqPathExpressions:
-      - '.metadata.annotations."deployment.kubernetes.io/desired-replicas"'
-      - '.metadata.annotations."deployment.kubernetes.io/max-replicas"'
-      - '.metadata.annotations."rollout.argoproj.io/desired-replicas"'
-  resource.customizations.ignoreResourceUpdates.argoproj.io_Application: |
-    jqPathExpressions:
-      - '.metadata.annotations."notified.notifications.argoproj.io"'
-      - '.metadata.annotations."argocd.argoproj.io/refresh"'
-      - '.metadata.annotations."argocd.argoproj.io/hydrate"'
-      - '.operation'
-  resource.customizations.ignoreResourceUpdates.argoproj.io_Rollout: |
-    jqPathExpressions:
-      - '.metadata.annotations."notified.notifications.argoproj.io"'
-  resource.customizations.ignoreResourceUpdates.autoscaling_HorizontalPodAutoscaler: |
-    jqPathExpressions:
-      - '.metadata.annotations."autoscaling.alpha.kubernetes.io/behavior"'
-      - '.metadata.annotations."autoscaling.alpha.kubernetes.io/conditions"'
-      - '.metadata.annotations."autoscaling.alpha.kubernetes.io/metrics"'
-      - '.metadata.annotations."autoscaling.alpha.kubernetes.io/current-metrics"'
-  resource.customizations.ignoreResourceUpdates.discovery.k8s.io_EndpointSlice: |
-    jsonPointers:
-      - /metadata
-      - /endpoints
-      - /ports
+
+  resource.customizations: |
+    # Fix for "Too long" error on CRDs
+    apiextensions.k8s.io/CustomResourceDefinition:
+      ignoreAnnotations:
+      - kubectl.kubernetes.io/last-applied-configuration
+
+    # Ignore status field for all resources
+    all:
+      ignoreResourceUpdates:
+        jsonPointers:
+        - /status
+
+    # Specific ignore rules per resource kind
+    ConfigMap:
+      ignoreResourceUpdates:
+        jqPathExpressions:
+        - .metadata.annotations."cluster-autoscaler.kubernetes.io/last-updated"
+        - .metadata.annotations."control-plane.alpha.kubernetes.io/leader"
+    Endpoints:
+      ignoreResourceUpdates:
+        jsonPointers:
+        - /metadata
+        - /subsets
+    apps/ReplicaSet:
+      ignoreResourceUpdates:
+        jqPathExpressions:
+        - .metadata.annotations."deployment.kubernetes.io/desired-replicas"
+        - .metadata.annotations."deployment.kubernetes.io/max-replicas"
+        - .metadata.annotations."rollout.argoproj.io/desired-replicas"
+    argoproj.io/Application:
+      ignoreResourceUpdates:
+        jqPathExpressions:
+        - .metadata.annotations."notified.notifications.argoproj.io"
+        - .metadata.annotations."argocd.argoproj.io/refresh"
+        - .metadata.annotations."argocd.argoproj.io/hydrate"
+        - .operation
+    argoproj.io/Rollout:
+      ignoreResourceUpdates:
+        jqPathExpressions:
+        - .metadata.annotations."notified.notifications.argoproj.io"
+    autoscaling/HorizontalPodAutoscaler:
+      ignoreResourceUpdates:
+        jqPathExpressions:
+        - .metadata.annotations."autoscaling.alpha.kubernetes.io/behavior"
+        - .metadata.annotations."autoscaling.alpha.kubernetes.io/conditions"
+        - .metadata.annotations."autoscaling.alpha.kubernetes.io/metrics"
+        - .metadata.annotations."autoscaling.alpha.kubernetes.io/current-metrics"
+    discovery.k8s.io/EndpointSlice:
+      ignoreResourceUpdates:
+        jsonPointers:
+        - /metadata
+        - /endpoints
+        - /ports
+
   resource.exclusions: |
     ### Network resources created by the Kubernetes control plane and excluded to reduce the number of watched events and UI clutter
     - apiGroups:
@@ -98,16 +122,3 @@ data:
       - BackgroundScanReport
       - ClusterBackgroundScanReport
       - UpdateRequest
-kind: ConfigMap
-metadata:
-  annotations:
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"v1","data":{"repositories":"- url: git@github.com:HowDiggy/k8s-gitops.git\n  sshPrivateKeySecret:\n    name: private-repo-secret\n    key: sshPrivateKey\n","resource.customizations.ignoreResourceUpdates.ConfigMap":"jqPathExpressions:\n  # Ignore the cluster-autoscaler status\n  - '.metadata.annotations.\"cluster-autoscaler.kubernetes.io/last-updated\"'\n  # Ignore the annotation of the legacy Leases election\n  - '.metadata.annotations.\"control-plane.alpha.kubernetes.io/leader\"'\n","resource.customizations.ignoreResourceUpdates.Endpoints":"jsonPointers:\n  - /metadata\n  - /subsets\n","resource.customizations.ignoreResourceUpdates.all":"jsonPointers:\n  - /status\n","resource.customizations.ignoreResourceUpdates.apps_ReplicaSet":"jqPathExpressions:\n  - '.metadata.annotations.\"deployment.kubernetes.io/desired-replicas\"'\n  - '.metadata.annotations.\"deployment.kubernetes.io/max-replicas\"'\n  - '.metadata.annotations.\"rollout.argoproj.io/desired-replicas\"'\n","resource.customizations.ignoreResourceUpdates.argoproj.io_Application":"jqPathExpressions:\n  - '.metadata.annotations.\"notified.notifications.argoproj.io\"'\n  - '.metadata.annotations.\"argocd.argoproj.io/refresh\"'\n  - '.metadata.annotations.\"argocd.argoproj.io/hydrate\"'\n  - '.operation'\n","resource.customizations.ignoreResourceUpdates.argoproj.io_Rollout":"jqPathExpressions:\n  - '.metadata.annotations.\"notified.notifications.argoproj.io\"'\n","resource.customizations.ignoreResourceUpdates.autoscaling_HorizontalPodAutoscaler":"jqPathExpressions:\n  - '.metadata.annotations.\"autoscaling.alpha.kubernetes.io/behavior\"'\n  - '.metadata.annotations.\"autoscaling.alpha.kubernetes.io/conditions\"'\n  - '.metadata.annotations.\"autoscaling.alpha.kubernetes.io/metrics\"'\n  - '.metadata.annotations.\"autoscaling.alpha.kubernetes.io/current-metrics\"'\n","resource.customizations.ignoreResourceUpdates.discovery.k8s.io_EndpointSlice":"jsonPointers:\n  - /metadata\n  - /endpoints\n  - /ports\n","resource.exclusions":"### Network resources created by the Kubernetes control plane and excluded to reduce the number of watched events and UI clutter\n- apiGroups:\n  - ''\n  - discovery.k8s.io\n  kinds:\n  - Endpoints\n  - EndpointSlice\n### Internal Kubernetes resources excluded reduce the number of watched events\n- apiGroups:\n  - coordination.k8s.io\n  kinds:\n  - Lease\n### Internal Kubernetes Authz/Authn resources excluded reduce the number of watched events\n- apiGroups:\n  - authentication.k8s.io\n  - authorization.k8s.io\n  kinds:\n  - SelfSubjectReview\n  - TokenReview\n  - LocalSubjectAccessReview\n  - SelfSubjectAccessReview\n  - SelfSubjectRulesReview\n  - SubjectAccessReview\n### Intermediate Certificate Request excluded reduce the number of watched events\n- apiGroups:\n  - certificates.k8s.io\n  kinds:\n  - CertificateSigningRequest\n- apiGroups:\n  - cert-manager.io\n  kinds:\n  - CertificateRequest\n### Cilium internal resources excluded reduce the number of watched events and UI Clutter\n- apiGroups:\n  - cilium.io\n  kinds:\n  - CiliumIdentity\n  - CiliumEndpoint\n  - CiliumEndpointSlice\n### Kyverno intermediate and reporting resources excluded reduce the number of watched events and improve performance\n- apiGroups:\n  - kyverno.io\n  - reports.kyverno.io\n  - wgpolicyk8s.io\n  kinds:\n  - PolicyReport\n  - ClusterPolicyReport\n  - EphemeralReport\n  - ClusterEphemeralReport\n  - AdmissionReport\n  - ClusterAdmissionReport\n  - BackgroundScanReport\n  - ClusterBackgroundScanReport\n  - UpdateRequest\n"},"kind":"ConfigMap","metadata":{"annotations":{},"creationTimestamp":"2025-08-20T00:43:02Z","labels":{"app.kubernetes.io/name":"argocd-cm","app.kubernetes.io/part-of":"argocd"},"name":"argocd-cm","namespace":"argocd","resourceVersion":"1728","uid":"63663a30-876d-4284-88d7-4c7e2d860ce8"}}
-  creationTimestamp: "2025-08-20T00:43:02Z"
-  labels:
-    app.kubernetes.io/name: argocd-cm
-    app.kubernetes.io/part-of: argocd
-  name: argocd-cm
-  namespace: argocd
-  resourceVersion: "42461"
-  uid: 63663a30-876d-4284-88d7-4c7e2d860ce8
