installCRDS: false update as needed by official helm chart

--- a/infrastructure/base/actions-runner-controller/02-arc-controller-app.yaml
+++ b/infrastructure/base/actions-runner-controller/02-arc-controller-app.yaml
@@ -18,8 +18,7 @@ spec:
     helm:
       values: |
         # This is the key: tells the chart to NOT install CRDs
-        crds:
-          install: false
+        installCRDs: false
   destination:
     server: https://kubernetes.default.svc
     namespace: actions-runner-system
