--- a/apps/base/signconnect/kustomization.yaml
+++ b/apps/base/signconnect/kustomization.yaml
@@ -7,3 +7,7 @@ resources:
   - 02-backend-service.yaml
   - 03-frontend-deployment.yaml
   - 04-frontend-service.yaml
+  - 05-backend-secret.yaml
+  - 06-postgres-pvc.yaml
+  - 07-postgres-deployment.yaml
+  - 08-postgres-service.yaml
