--- a/clusters/home-dev/infrastructure-apps.yaml
+++ b/clusters/home-dev/infrastructure-apps.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/HowDiggy/k8s-gitops.git # Your git repo
-    targetRevision: main
+    targetRevision: dev
     path: infrastructure/base # <--- Points to your base infrastructure directory
     directory:
       recurse: true # <--- The magic! Finds all apps in subdirectories
