fix(cnpg): Correct sync wave for postgresql cluster

--- a/infrastructure/base/postgresql/postgresql-cluster.yaml
+++ b/infrastructure/base/postgresql/postgresql-cluster.yaml
@@ -3,7 +3,9 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: signconnect-db-cluster
-  namespace: databases # Deploying into our new namespace
+  namespace: databases
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   instances: 2
   primaryUpdateStrategy: unsupervised
@@ -14,11 +16,7 @@ spec:
   enableSuperuserAccess: true
   postgresql:
     parameters:
-      # This is required to load the pg_vector extension library
       shared_preload_libraries: 'pg_stat_statements,pgaudit,pg_vector'
-
-  # This bootstrap block runs SQL commands after the database is first initialized.
-  # We use it here to automatically create the pg_vector extension.
   bootstrap:
     initdb:
       postInitApplicationSQL:
