feat(infra): Deploy CNPG operator via Helm chart

--- a/apps/base/signconnect/kustomization.yaml
+++ b/apps/base/signconnect/kustomization.yaml
@@ -8,6 +8,4 @@ resources:
   - 03-frontend-deployment.yaml
   - 04-frontend-service.yaml
   - 05-backend-secret.yaml
-  - 06-postgres-pvc.yaml
-  - 07-postgres-deployment.yaml
-  - 08-postgres-service.yaml
+  - 09-postgres-cluster.yaml
