--- a/infrastructure/base/postgresql/kustomization.yaml
+++ b/infrastructure/base/postgresql/kustomization.yaml
@@ -2,4 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - 00-namespace.yaml # <-- Add this line
   - cnpg-operator-app.yaml
