refactor(sealed-secrets): Switch to official project Helm chart

--- a/infrastructure/base/sealed-secrets/sealed-secrets-app.yaml
+++ b/infrastructure/base/sealed-secrets/sealed-secrets-app.yaml
@@ -5,22 +5,21 @@ metadata:
   name: sealed-secrets
   namespace: argocd
   annotations:
-    # Deploy this in an early wave to ensure it's ready for other apps
     argocd.argoproj.io/sync-wave: "-2"
 spec:
   project: default
   source:
-    repoURL: https://bitnami-labs.github.io/sealed-secrets
+    # This is the official chart repository from the project maintainers
+    repoURL: https://sealed-secrets.github.io/sealed-secrets
     chart: sealed-secrets
+    # The latest version from this official repository
     targetRevision: "2.17.4"
   destination:
     server: https://kubernetes.default.svc
-    # It's best practice to install it in the kube-system namespace
     namespace: kube-system
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
-      # We don't need CreateNamespace=true as kube-system already exists
       - ServerSideApply=true
