--- a/clusters/home-dev/infrastructure-apps.yaml
+++ b/clusters/home-dev/infrastructure-apps.yaml
@@ -5,38 +5,37 @@ metadata:
   name: infrastructure-apps
   namespace: argocd
 spec:
+  # We will explicitly list the infrastructure applications to create
   generators:
-  - git:
-      repoURL: https://github.com/HowDiggy/k8s-gitops.git
-      revision: dev
-      directories:
-      - path: infrastructure/base/*
+  - list:
+      elements:
+      - name: sealed-secrets
+        repoURL: https://sealed-secrets.github.io/sealed-secrets
+        chart: sealed-secrets
+        version: "2.17.4"
+        namespace: kube-system
+      - name: cnpg-operator
+        repoURL: https://cloudnative-pg.github.io/charts
+        chart: cloudnative-pg
+        version: "0.26.0"
+        namespace: cnpg-system
   template:
     metadata:
-      name: '{{path.basename}}'
+      name: '{{name}}'
       namespace: argocd
     spec:
       project: default
-      # --- THIS IS THE CRITICAL CHANGE ---
       source:
-        repoURL: https://github.com/HowDiggy/k8s-gitops.git
-        targetRevision: dev
-        path: '{{path}}'
-        # By adding this 'kustomize' block, we tell the generated Application
-        # to run 'kustomize build' on the path. This correctly processes
-        # the kustomization.yaml in the subdirectory (e.g., /sealed-secrets),
-        # which in turn includes the real Application manifest with the Helm source.
-        kustomize: {}
-      # ------------------------------------
+        repoURL: '{{repoURL}}'
+        chart: '{{chart}}'
+        targetRevision: '{{version}}'
       destination:
         server: https://kubernetes.default.svc
-        namespace: default # This is a placeholder, the actual namespace is set by the child app
+        namespace: '{{namespace}}'
       syncPolicy:
         automated:
           prune: true
           selfHeal: true
-        ignoreDifferences:
-        - group: argoproj.io
-          kind: Application
-          jsonPointers:
-          - /metadata/annotations/kubectl.kubernetes.io~1last-applied-configuration
+        syncOptions:
+          - CreateNamespace=true
+          - ServerSideApply=true
