--- a/clusters/home-dev/app-signconnect-dev.yaml
+++ b/clusters/home-dev/app-signconnect-dev.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-signconnect-dev
+  name: dev-app-signconnect
   namespace: argocd
 spec:
   project: default
