changed prod cluster sync policy to manual sync for manual promotion

--- a/clusters/oci-prod/app-signconnect-prod.yaml
+++ b/clusters/oci-prod/app-signconnect-prod.yaml
@@ -15,9 +15,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: signconnect
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+  syncPolicy: {}
+  syncOptions:
+    - CreateNamespace=true
