--- a/clusters/oci-prod/infra.yaml
+++ b/clusters/oci-prod/infra.yaml
@@ -1,72 +1,17 @@
-apiVersion: argoproj.io/v1alpha1
-kind: ApplicationSet
-metadata:
-  name: prod-infrastructure
-  namespace: argocd
-spec:
-  generators:
-  - list:
-      elements:
-        - name: cert-manager
-          repoURL: https://charts.jetstack.io
-          chart: cert-manager
-          targetRevision: v1.17.2
-          namespace: cert-manager
-          helmValues: |
-            installCRDs: true
-        - name: ingress-nginx
-          repoURL: https://kubernetes.github.io/ingress-nginx
-          chart: ingress-nginx
-          targetRevision: 4.12.2
-          namespace: ingress-nginx
-          helmValues: |
-            controller:
-              replicaCount: 2
-              nodeSelector:
-                kubernetes.io/arch: "arm64"
-              service:
-                type: LoadBalancer
-                annotations:
-                  oci.oraclecloud.com/load-balancer-type: "lb"
-                  service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
-                  service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
-                  service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
-              admissionWebhooks:
-                patch:
-                  nodeSelector:
-                    kubernetes.io/arch: "arm64"
-  template:
-    metadata:
-      name: '{{name}}'
-      namespace: argocd
-    spec:
-      project: default
-      source:
-        repoURL: '{{repoURL}}'
-        chart: '{{chart}}'
-        targetRevision: '{{targetRevision}}'
-        helm:
-          values: '{{helmValues}}'
-      destination:
-        server: https://kubernetes.default.svc
-        namespace: '{{namespace}}'
-      syncPolicy: {}
-      syncOptions:
-      - CreateNamespace=true
-
----
+# clusters/oci-prod/infra.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prod-infra-cluster-issuers
+  name: prod-infrastructure
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/HowDiggy/k8s-gitops.git
     targetRevision: main
-    path: infrastructure/base/cert-manager
+    # Point to the Kustomize overlay for production infrastructure
+    path: infrastructure/overlays/production
   destination:
     server: https://kubernetes.default.svc
-    namespace: cert-manager
-  syncPolicy: {}
+    namespace: argocd
+  syncPolicy: {} # Keep the manual sync policy for production
