--- a/clusters/staging/infra.yaml
+++ b/clusters/staging/infra.yaml
@@ -1,73 +1,19 @@
 # clusters/staging/infra.yaml
 apiVersion: argoproj.io/v1alpha1
-kind: ApplicationSet
-metadata:
-  name: staging-infrastructure
-  namespace: argocd
-spec:
-  generators:
-  - list:
-      elements:
-        - name: cert-manager
-          repoURL: https://charts.jetstack.io
-          chart: cert-manager
-          targetRevision: v1.17.2
-          namespace: cert-manager
-          helmValues: |
-            installCRDs: true
-        - name: ingress-nginx
-          repoURL: https://kubernetes.github.io/ingress-nginx
-          chart: ingress-nginx
-          targetRevision: 4.12.2
-          namespace: ingress-nginx
-          helmValues: |
-            controller:
-              replicaCount: 1
-              nodeSelector:
-                kubernetes.io/arch: "amd64"
-              service:
-                type: LoadBalancer
-              admissionWebhooks:
-                patch:
-                  nodeSelector:
-                    kubernetes.io/arch: "amd64"
-  template:
-    metadata:
-      name: '{{name}}'
-      namespace: argocd
-    spec:
-      project: default
-      source:
-        repoURL: '{{repoURL}}'
-        chart: '{{chart}}'
-        targetRevision: '{{targetRevision}}'
-        helm:
-          values: '{{helmValues}}'
-      destination:
-        server: https://kubernetes.default.svc
-        namespace: '{{namespace}}'
-      syncPolicy:
-        automated:
-          prune: true
-          selfHeal: true
-        syncOptions:
-        - CreateNamespace=true
-
----
-apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: staging-infra-cluster-issuers
+  name: staging-infrastructure
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/HowDiggy/k8s-gitops.git
     targetRevision: main
-    path: infrastructure/base/cert-manager
+    # Point to the Kustomize overlay for staging infrastructure
+    path: infrastructure/overlays/staging
   destination:
     server: https://kubernetes.default.svc
-    namespace: cert-manager
+    namespace: argocd # This app lives in argocd, but its resources will be created in their own namespaces
   syncPolicy:
     automated:
       prune: true
